# migrate-to-uv

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  validate-ci-workflows.yml  validate-renovate-config.yml
src/converters/poetry/: version.rs
