[package]
name = "migrate-to-uv"
version = "0.12.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["Mathieu Kniewallner <mathieu.kniewallner@gmail.com>"]
default-run = "migrate-to-uv"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
clap-verbosity-flag = "=3.0.4"
env_logger = "=0.11.10"
indexmap = { version = "=2.14.0", features = ["serde"] }
log = "=0.4.32"
owo-colors = "=4.3.0"
pep440_rs = "=0.7.3"
pep508_rs = "=0.9.2"
regex = "=1.12.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
toml = { version = "=1.1.2", features = ["preserve_order"] }
toml_edit = { version = "=0.25.12", features = ["display", "serde"] }
url = "=2.5.8"
which = "=8.0.2"

[dev-dependencies]
dircpy = "=0.3.20"
flate2 = "=1.1.9"
insta = { version = "=1.47.2", features = ["filters"] }
insta-cmd = "=0.6.0"
rstest = "=0.26.1"
tar = "=0.4.46"
tempfile = "=3.27.0"
walkdir = "=2.5.0"
zip = "=8.5.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
