[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "migrate-to-uv"
version = "0.12.0"
description = ""
authors = [{ name = "Mathieu Kniewallner", email = "mathieu.kniewallner@gmail.com" }]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = [
    "uv",
    "migrate",
    "poetry",
    "pipenv",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Documentation = "https://osprey-oss.github.io/migrate-to-uv/"
Repository = "https://github.com/osprey-oss/migrate-to-uv"
Changelog = "https://github.com/osprey-oss/migrate-to-uv/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/mkniewallner"

[dependency-groups]
docs = ["zensical==0.0.51; python_version >= '3.10'"]

[tool.maturin]
bindings = "bin"
module-name = "migrate_to_uv"

[tool.uv]
exclude-newer = "1 week"
